Fixed button stylings.

--- a/src/app.css
+++ b/src/app.css
@@ -95,6 +95,7 @@ form {
     padding: 0.25rem 1rem;
     text-decoration: none;
     font: inherit;
+    color: #00695c;
     border: solid 1px #00695c;
     background: white;
     border-radius: 3px;
