--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
-/* General CSS Selectors */
+/* =================================== */
+/* Main CSS Selectors */
+/* =================================== */
 * {
     box-sizing: border-box;
 }
@@ -20,6 +22,10 @@ form {
     display: inline;
 }
 
+.centered {
+    text-align: center;
+}
+
 .main-header {
     width: 100%;
     height: 3.5rem;
@@ -30,8 +36,8 @@ form {
 }
 
 .main-header__nav {
-    display: flex;
     height: 100%;
+    display: none;
     align-items: center;
 }
 
@@ -58,83 +64,81 @@ form {
     color: #ffeb3b;
 }
 
-/* Form CSS Selectors */
-.product-form {
-    width: 20rem;
+.mobile-nav {
+    width: 30rem;
+    height: 100vh;
     max-width: 90%;
-    margin: auto;
-    display: block;
-}
-
-.form-control {
-    margin: 1rem 0;
-}
-
-.form-control label,
-.form-control input,
-.form-control textarea {
-    display: block;
-    width: 100%;
-    margin-bottom: 0.25rem;
-}
-
-.form-control input,
-.form-control textarea {
-    border: 1px solid #a1a1a1;
-    font: inherit;
-    border-radius: 2px;
-}
-
-.form-control input:focus,
-.form-control textarea:focus {
-    outline-color: #00695c;
-}
-
-.btn {
-    display: inline-block;
-    padding: 0.25rem 1rem;
-    text-decoration: none;
-    font: inherit;
-    color: #00695c;
-    border: solid 1px #00695c;
+    position: fixed;
+    left: 0;
+    top: 0;
     background: white;
+    z-index: 10;
+    padding: 2rem 1rem 1rem 2rem;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-out;
+}
+
+.mobile-nav.open {
+    transform: translateX(0);
+}
+
+.mobile-nav__item-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+.mobile-nav__item {
+    margin: 1rem;
+    padding: 0;
+}
+
+.mobile-nav__item a {
+    text-decoration: none;
+    color: black;
+    font-size: 1.5rem;
+    padding: 0.5rem 2rem;
+}
+
+.mobile-nav__item a:active,
+.mobile-nav__item a:hover,
+.mobile-nav__item a.active {
+    background: #00695c;
+    color: white;
     border-radius: 3px;
+}
+
+#side-menu-toggle {
+    border: 1px solid white;
+    font: inherit;
+    padding: 0.5rem;
+    display: block;
+    background: transparent;
+    color: white;
     cursor: pointer;
 }
 
-.btn:active,
-.btn:hover {
-    background: #00695c;
-    color: white;
+#side-menu-toggle:focus {
+    outline: none;
 }
 
-/* Product CSS Selectors */
-.product-form {
-    width: 20rem;
-    max-width: 90%;
-    margin: auto;
-    display: block;
+#side-menu-toggle:active,
+#side-menu-toggle:hover {
+    color: #ffeb3b;
+    border-color: #ffeb3b;
 }
 
-.product-item {
-    width: 20rem;
-    max-width: 95%;
-    margin: 1rem;
-}
-
-.product__title {
-    font-size: 1.5rem;
-    text-align: center;
-}
-
-.product__price {
-    text-align: center;
-    color: #4d4d4d;
-    margin-bottom: 0.5rem;
-}
-
-.product__description {
-    text-align: center;
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 5;
+    display: none;
 }
 
 .grid {
@@ -176,4 +180,90 @@ form {
 .card__actions button,
 .card__actions a {
     margin: 0 0.25rem;
+}
+
+.btn {
+    display: inline-block;
+    padding: 0.25rem 1rem;
+    text-decoration: none;
+    font: inherit;
+    border: 1px solid #00695c;
+    color: #00695c;
+    background: white;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+    background-color: #00695c;
+    color: white;
+}
+
+@media (min-width: 768px) {
+    .main-header__nav {
+        display: flex;
+    }
+
+    #side-menu-toggle {
+        display: none;
+    }
+}
+
+/* =============================== */
+/* Form CSS Selectors */
+/* =============================== */
+.form-control {
+    margin: 1rem 0;
+}
+
+.form-control label,
+.form-control input,
+.form-control textarea {
+    display: block;
+    width: 100%;
+    margin-bottom: 0.25rem;
+}
+
+.form-control input,
+.form-control textarea {
+    border: 1px solid #a1a1a1;
+    font: inherit;
+    border-radius: 2px;
+}
+
+.form-control input:focus,
+.form-control textarea:focus {
+    outline-color: #00695c;
+}
+
+/* ================================ */
+/* Product CSS Selectors */
+/* ================================ */
+.product-form {
+    width: 20rem;
+    max-width: 90%;
+    margin: auto;
+    display: block;
+}
+
+.product-item {
+    width: 20rem;
+    max-width: 95%;
+    margin: 1rem;
+}
+
+.product__title {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
+}
+
+.product__description {
+    text-align: center;
 }
